apps/base/windows-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: windows-exporter
  namespace: windows-exporter
spec:
  ports:
    - port: 9182
      targetPort: 9182
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: windows-exporter
  namespace: windows-exporter
subsets:
  - addresses:
      - ip: 195.178.173.110
    ports:
      - port: 9182
